plugins {
    id 'com.android.library'
    id 'com.jfrog.artifactory'
    id 'maven-publish'
}

//==================================================================================================
// PROJECT
//==================================================================================================
def project_name = project.name
def version_name = project.version
if (branchName != null && buildNumber != null && branchName.toString() != "master"
        && !branchName.toString().startsWith("beta/")
        && !branchName.toString().startsWith("release/")
        && !branchName.toString().startsWith("release-ng/")) {

    version_name = "${version_name}-${branchName}"
    project_name = "${project_name}.beta"
}
version = version_name

//==================================================================================================
// ANDROID
//==================================================================================================

android {
    compileSdk = android_api
    defaultConfig {
        minSdkVersion min_android_api
        targetSdkVersion android_api
        versionCode System.getenv("GITHUB_RUN_NUMBER") ? System.getenv("GITHUB_RUN_NUMBER").toInteger() : 1
        versionName version_name
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled System.getenv("CI") ? true : false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'lite.sdk.pro'
            buildConfigField "String", "OMIDPV", "\"$omid_version\""
            buildConfigField "String", "OMIDPN", "\"Pubnativenet\""
            buildConfigField "String", "HVER", "\"$version_name\""
            buildConfigField "String", "SDK_VERSION", "\"$version_name\""
            buildConfigField "String", "SDK_WRAPPER_VERSION", "\"$version_name\""
            buildConfigField "String", "SDK_WRAPPER_PACKAGE", "\"\""
            buildConfigField "String", "DISPLAY_MANAGER_NAME", "\"HyBid\""
            buildConfigField "Boolean", "IS_WRAPPED", "false"
            buildConfigField "String", "BASE_URL", "\"https://api.pubnative.net/\""
            buildConfigField "String", "BASE_RTB_URL", "\"https://dsp.pubnative.net/\""
        }
        debug {
            buildConfigField "String", "OMIDPV", "\"$omid_version\""
            buildConfigField "String", "OMIDPN", "\"Pubnativenet\""
            buildConfigField "String", "HVER", "\"$version_name\""
            buildConfigField "String", "SDK_VERSION", "\"$version_name\""
            buildConfigField "String", "SDK_WRAPPER_VERSION", "\"$version_name\""
            buildConfigField "String", "SDK_WRAPPER_PACKAGE", "\"\""
            buildConfigField "String", "DISPLAY_MANAGER_NAME", "\"HyBid\""
            buildConfigField "Boolean", "IS_WRAPPED", "false"
            buildConfigField "String", "BASE_URL", "\"https://api.pubnative.net/\""
            buildConfigField "String", "BASE_RTB_URL", "\"https://dsp.pubnative.net/\""
            enableUnitTestCoverage true
            enableAndroidTestCoverage true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildFeatures {
        buildConfig true
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }
    namespace 'net.pubnative.lite.sdk'
}

// Helper method to update specific files
def updateFileWithReplacements(String filePath, Map<String, String> replacements) {
    def targetFile = file(filePath)
    if (targetFile.exists()) {
        def content = targetFile.text
        replacements.each { oldValue, newValue ->
            content = content.replace(oldValue, newValue)
        }
        targetFile.text = content
    } else {
        println "${filePath} file not found at: ${targetFile.path}"
    }
}

dependencies {

    implementation "net.pubnative:hybid.omsdk:$omid_version"
    implementation "com.verve:atom.sdk:+"

    testImplementation "androidx.test:core:1.7.0"
    testImplementation 'androidx.core:core:1.15.0'
    testImplementation 'androidx.test:core:1.7.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.robolectric:robolectric:4.15.1'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'com.google.truth:truth:1.4.5'
    testImplementation 'org.mockito:mockito-inline:5.2.0'


    testImplementation 'com.squareup.assertj:assertj-android:1.2.0'
    androidTestImplementation "androidx.test:runner:1.1.0-beta01", {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
    androidTestImplementation "androidx.test:rules:1.1.0-beta01", {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-beta01", {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
}
//--------------------------------------------------------------------------------------------------
// sonar
//--------------------------------------------------------------------------------------------------
apply plugin: 'jacoco'

jacoco {
    toolVersion = "0.8.11"
}

tasks.register("jacocoTestReport", JacocoReport) {
    group = "verification"
    description = "Generates JaCoCo coverage report for hybid.sdk"

    dependsOn "testDebugUnitTest"

    reports {
        xml.required = true
        html.required = true
    }

    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*']
    def debugTree = layout.buildDirectory.dir("intermediates/javac/debug")
    def kotlinDebugTree = layout.buildDirectory.dir("tmp/kotlin-classes/debug")

    sourceDirectories.setFrom(files([
            "$projectDir/src/main/java",
            "$projectDir/src/main/kotlin"
    ]))

    classDirectories.setFrom(files([
        fileTree(dir: debugTree.get().asFile, excludes: fileFilter),
        fileTree(dir: kotlinDebugTree.get().asFile, excludes: fileFilter)
    ]))

    executionData.setFrom(fileTree(dir: layout.buildDirectory.get().asFile, includes: [
            "jacoco/testDebugUnitTest.exec",
            "outputs/unit_test_code_coverage/debugUnitTest/testDebugUnitTest.exec"
    ]))
}

tasks.withType(Test).configureEach {
    jacoco {
        includeNoLocationClasses = true
        excludes = ['jdk.internal.*']
    }
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}

//--------------------------------------------------------------------------------------------------
// COVERALLS
//--------------------------------------------------------------------------------------------------
//cobertura.coverageFormats = ['html', 'xml']

tasks.register('sourcesJar', Jar) {
    from android.sourceSets.main.java.srcDirs
    archiveClassifier = 'sources'
}

tasks.register('javadoc', Javadoc) {
    source = android.sourceSets.main.java.srcDirs
    def bootClasspathFiles = android.getBootClasspath().findAll { it != null && it.toString().trim() }
    classpath += project.rootProject.files(bootClasspathFiles)
    options.memberLevel = JavadocMemberLevel.PUBLIC
    failOnError false
}

tasks.register('javadocJar', Jar) {
    dependsOn javadoc
    archiveClassifier = 'javadoc'
    from javadoc.destinationDir
}

static def addDependency(dependency, dependenciesNode) { //finish with dependencies
    if (dependency.group != null && dependency.name != null) {
        def dependencyNode = dependenciesNode.appendNode('dependency')
        dependencyNode.appendNode('groupId', dependency.group)
        dependencyNode.appendNode('artifactId', dependency.name)
        dependencyNode.appendNode('version', dependency.version)

        if (dependency.excludeRules.size() > 0) {
            def exclusions = dependencyNode.appendNode('exclusions')
            dependency.excludeRules.each { ExcludeRule ex ->
                def exclusion = exclusions.appendNode('exclusion')
                exclusion.appendNode('groupId', ex.group)
                if (ex.module == null || ex.module.isEmpty()) {
                    exclusion.appendNode('artifactId', "*")
                } else {
                    exclusion.appendNode('artifactId', ex.module)
                }
            }
        }
    }
}

publishing {
    publications {
        aar(MavenPublication) {
            groupId project.group
            artifactId project.name
            version version_name
            artifact javadocJar
            if (branchName.toString() == "master"
                    || branchName.toString().startsWith("release/")
                    || branchName.toString().startsWith("release-ng/")) {
                artifact sourcesJar
            }
            android.libraryVariants.all { variant ->
                if (variant.buildType.name == "debug") return
                artifact variant.outputs[0].packageLibrary // This is the aar library
            }

            pom.withXml {
                def dependenciesNode = asNode().appendNode('dependencies')

                configurations.implementation.allDependencies.withType(ModuleDependency).each {
                    addDependency(it, dependenciesNode)
                }
            }
        }
    }
}

artifactory {
    contextUrl = System.getenv("ARTIFACTORY_CONTEXT_URL")
    publish {
        repository {
            repoKey = System.getenv("ARTIFACTORY_REPOKEY")
            username = System.getenv("ARTIFACTORY_USER")
            password = System.getenv("ARTIFACTORY_PASSWORD")
        }

        defaults {
            publications('aar')
            publishArtifacts = true
            publishPom = true
        }
    }
}
